Itch.io Widgets & Page Grammar Checking

--- a/bloodlust.html
+++ b/bloodlust.html
@@ -9,7 +9,7 @@
 		<title>Ryan Carpenter's Portfolio - Bloodlust</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />	<!-- css stylesheet -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -25,9 +25,9 @@
 						<li><a href="unstable_star.html">Unstable Star</a></li>
 						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html" class="active">Bloodlust</a></li>
-						<li><a href="star_raid.html">Star Raid</a></li>
+						<!-- <li><a href="star_raid.html">Star Raid</a></li> (archived) -->
 						<li><a href="fishy_business.html">Fishy Business</a></li>
-						<li><a href="soc.html">Spirit of Calamity</a></li>
+						<!-- <li><a href="soc.html">Spirit of Calamity</a></li> (archived) -->
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
@@ -39,6 +39,9 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- Game Widget -->
+							<iframe class="widget" frameborder="0" src="https://itch.io/embed/1473093?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
+								<a href="https://madcolors-entertainment.itch.io/bloodlust">Bloodlust by MadColors Entertainment</a></iframe>
 							<!-- Project Title -->
 							<h1 class="major">Bloodlust</h1>
 							<span class="image fit"><img src="images/blood_gameplay_2.gif" alt="" /></span>
@@ -54,8 +57,8 @@
 							<!-- Gameplay Description -->
 							<h2>Gameplay</h2>
 							<p>
-								The player starts with a full blood count that decreases over time. Once it reaches zero, the player dies. Study victim's schedules closely
-								to find the best time to strike, but be cautious—if a victim escapes, they'll alert the nearby guards. The player can take advantage of the weapons
+								The player starts with a full blood count that decreases over time. Once it reaches zero, the player dies. Study your victim's schedules closely
+								and find the best time to strike, but be cautious—if a victim escapes, they'll alert the nearby guards. The player can take advantage of the weapons
 								some NPCs drop to kill more effectively. The aim of the game is to survive and accrue as many kills as possible.
 							</p>
 							<!-- Feature List -->
@@ -71,12 +74,12 @@
 									<tbody>
 										<tr>
 											<td>Day and Night Cycles</td>
-											<td>The time scale of the game can affect the day/night cycle of the game. This in turn will affects NPC awareness during certain times.</td>
+											<td>The time scale of the game can affect the day/night cycle of the game. This in turn affects NPC awareness during certain times.</td>
 											<td></td>
 										</tr>
 										<tr>
 											<td>Dynamic NPC Schedules</td>
-											<td>NPCs follow specific schedules based on delta time and utalize pathfinding.</td>
+											<td>NPCs follow specific schedules based on delta time and utilize pathfinding.</td>
 										</tr>
 										<tr>
 											<td>Dynamic NPC Behavior</td>
@@ -86,7 +89,7 @@
 										</tr>
 										<tr>
 											<td>Inventory System</td>
-											<td>An inventory system determines what the player has in their arsonal at a given time.</td>
+											<td>An inventory system determines what the player has in their arsenal at a given time.</td>
 										</tr>
 										<tr>
 											<td>Music and Sound</td>
