--- a/future_scape.html
+++ b/future_scape.html
@@ -9,7 +9,7 @@
 		<title>Ryan Carpenter's Portfolio - Future Scape</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />	<!-- css stylesheet -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -25,9 +25,9 @@
 						<li><a href="unstable_star.html">Unstable Star</a></li>
 						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
-						<li><a href="star_raid.html">Star Raid</a></li>
+						<!-- <li><a href="star_raid.html">Star Raid</a></li> (archived) -->
 						<li><a href="fishy_business.html">Fishy Business</a></li>
-						<li><a href="soc.html">Spirit of Calamity</a></li>
+						<!-- <li><a href="soc.html">Spirit of Calamity</a></li> (archived) -->
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
@@ -45,11 +45,11 @@
 							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
 							<h2>Summary</h2>
 							<p>
-								Developed for Enterprise Technologies, Future Scape is a virtual career exploration tool designed for primary and middle school students.
+								Developed for <a href="https://tech.asu.edu/">Enterprise Technologies</a>, <em>Future Scape</em> is a virtual career exploration tool designed for K-12 students.
 								The project features interactive minigames, each showcasing different careers such as pharmacology, manufacturing, forensic science, etc. 
 								I specifically designed and developed the pharmacy, manufacturing, and urban planning minigames. 
 								In the pharmacy minigame, players act as pharmacists, dispensing medications to patients within a time limit. The manufacturing minigame challenges 
-								players to build assembly lines and create products while manating a budget. The urban planning minigame involves designing a city and
+								players to build assembly lines and create products while managing a budget. The urban planning minigame involves designing a city and
 								managing resources and budgeting effectively.
 							</p>
 							<!-- Gameplay Description -->
@@ -84,7 +84,7 @@
 											<td> 
 												Utilized in both manufacturing and urban planning, this feature includes grid snapping and spatial memory for object placement.
 												The player may place and remove objects in a way that does not conflict with the placement of others. The player may rotate and
-												select a variety of objects with the help of transparent green silhouette in the shape of the selected mesh.
+												select a variety of objects with the help of a transparent green silhouette in the shape of the selected mesh.
 											</td>
 											<td></td>
 										</tr>
@@ -92,7 +92,7 @@
 											<td>Component Linking</td>
 											<td> 
 												In manufacturing, components are machines that can be linked via conveyor belts to create assembly lines. 
-												A complex system handles items that interact with with these components, input item(s) are detected and accepted if a 
+												A complex system handles items that interact with these components, input item(s) are detected and accepted if a 
 												possible output item can be created.
 											</td>
 										</tr>
