--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 		<title>Ryan Carpenter's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />	<!-- css stylesheet -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
 
+	<body class="is-preload">
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
@@ -31,7 +31,6 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-
 				<!-- =============================================== Welcome =============================================== -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
@@ -47,42 +46,51 @@
 				<!-- =============================================== About Me =============================================== -->
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
+							<!-- Summary -->
 							<h2>ABOUT ME</h2>
 							<p>Hello, I'm a senior Computer Science undergraduate studying at <a href="https://www.asu.edu/">Arizona State University</a>. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
 								My dream is to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
+							
+							<!-- Feature Table -->
 							<div class="features">
-
+								<!-- Programming Experience -->
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
 									<ul>
 										<li>Proficiant Languages: C#, C++, C, HTML, CSS, Javascript.</li>
 										<li>Other languages that I've learned:<br>SQL, Kotlin, Java, Python.</li>
+										<li>Special Interests: Game Engine Development, Web Development, App Development,
+											AI in Video Games, Compiler Design.
+										</li>
+										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
 								</section>
-
+								<!-- Game Development Experience -->
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Game Development</h3>
 									<ul>
 										<li>President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Developement Club at ASU</a>.</li>
 										<li>6+ years of experience with the <a href="https://unity.com/">Unity Creation Engine</a>.</li>
-										<li>Participated in multiple game jams including <a href="https://ldjam.com/">Ludum Dare</a> (More info Below).</li>
-									</ul>
+										<li>1+ years of experience with <a href="https://docs.unity3d.com/Packages/com.unity.xr.interaction.toolkit@2.5/manual/index.html">Unity XR Interaction Toolkit</a>
+											 and <a href="https://developers.meta.com/horizon/develop">Meta Quest Developement</a>.</li>
+										<li>Participated in multiple game jams including <a href="https://ldjam.com/">Ludum Dare</a> (More info Below).</li>									</ul>
 								</section>
-
+								<!-- Education Experience -->
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
 									<h3>Education</h3>
 									<ul>
 										<li><a href="https://www.asu.edu/">Arizona State University</a> 2022 - Present
-											(Bachlor's Degree)</li>
+											(Bachlor's Degree - in Progress)</li>
 										<li><a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a> 2019 - 2022
-										(Associate Degree)</li>
+											(Associate Degree - Aquired 2022)</li>
 										<li><a href="https://www.msjc.edu/">Mt. San Jacento Collage</a> 2017 - 2018</li></ul>
+										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
 								</section>
-
+								<!-- Art and Animation Experience -->
 								<section>
 									<span class="icon solid major fa-paint-brush"></span>
 									<h3>Animation & Art</h3>
@@ -90,9 +98,9 @@
 										<li>Experience in <a href="https://www.blender.org/">Blender</a> an app used to create 3D game assets.</li>
 										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app used to make 2D pixel art.</li>
 										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Photoshop, Illistrator, and Lightroom.</li>
+										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
 								</section>
-
 							</div>
 						</div>
 					</section>
@@ -201,7 +209,7 @@
 									</div>
 							</div>
 						</section>
-						<!-- Star Raid -->
+						<!-- Star Raid (archived)
 						<section>
 							<a href="#" class="image"><img src="images/star_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -213,13 +221,14 @@
 											plans to continue developement. The game focused on co-op gameplay and featured P2P client-based multiplayer, a crafting system, A* pathfinding for 
 											enemies, raycasting projectiles, and a user-based command system. All assets and artwork are my own.
 										</p>
-										<!-- Make progress bars for coding languages used here -->
+										Make progress bars for coding languages used here
 										<ul class="actions">
 											<li><a href="star_raid.html" class="button">More Details</a></li>
 										</ul>
 									</div>
 							</div>
 						</section>
+						-->
 						<!-- Fishy Business -->
 						<section>
 							<a href="#" class="image"><img src="images/fishy_title.png" alt="" data-position="top center" /></a>
@@ -238,7 +247,7 @@
 								</div>
 							</div>
 						</section>
-						<!-- Spirit Of Calamity -->
+					<!-- Spirit Of Calamity	(archived)
 						<section>
 							<a href="#" class="image"><img src="images/spirit_title.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
@@ -254,6 +263,7 @@
 								</div>
 							</div>
 						</section>
+					-->
 						<!-- Other Games -->
 						<section>
 							<a href="#" class="image"><img src="images/dwarf_title.jpg" alt="" data-position="25% 25%" /></a>
@@ -273,6 +283,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>CONTACT</h2>
+									<!-- Emails -->
 									<ul class="contact">
 										<li>
 											<h3>Developer Email</h3>
@@ -287,6 +298,7 @@
 											<p>rjcarpe2@asu.edu
 										</li>
 										<li>
+										<!-- Social Media -->
 											<h3>Socials</h3>
 											<ul class="icons">
 												<li><a href="https://www.linkedin.com/in/ryan-carpenter-4bba08182/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
@@ -298,7 +310,6 @@
 							</div>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
