--- a/other_pj.html
+++ b/other_pj.html
@@ -9,7 +9,7 @@
 		<title>Ryan Carpenter's Portfolio - Smaller Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />	<!-- css stylesheet -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -25,9 +25,9 @@
 						<li><a href="unstable_star.html">Unstable Star</a></li>
 						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
-						<li><a href="star_raid.html">Star Raid</a></li>
+						<!-- <li><a href="star_raid.html">Star Raid</a></li> (archived) -->
 						<li><a href="fishy_business.html">Fishy Business</a></li>
-						<li><a href="soc.html">Spirit of Calamity</a></li>
+						<!-- <li><a href="soc.html">Spirit of Calamity</a></li> (archived) -->
 						<li><a href="other_pj.html" class="active">Smaller Projects</a></li>
 					</ul>
 				</nav>
