--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -9,7 +9,7 @@
 		<title>Ryan Carpenter's Portfolio - Rogue Nebula</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />	<!-- css stylesheet -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -25,9 +25,9 @@
 						<li><a href="unstable_star.html">Unstable Star</a></li>
 						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
-						<li><a href="star_raid.html">Star Raid</a></li>
+						<!-- <li><a href="star_raid.html">Star Raid</a></li> (archived) -->
 						<li><a href="fishy_business.html">Fishy Business</a></li>
-						<li><a href="soc.html">Spirit of Calamity</a></li>
+						<!-- <li><a href="soc.html">Spirit of Calamity</a></li> (archived) -->
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
@@ -39,6 +39,9 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- Game Widget -->
+							<iframe class="widget" frameborder="0" src="https://itch.io/embed/2220827?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
+								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe>
 							<!-- Project Title -->
 							<h1 class="major">Rogue Nebula</h1>
 							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
@@ -54,9 +57,9 @@
 							<h2>Gameplay</h2>
 							<p> 
 								The player begins by entering their name for a leaderboard entry; if a name is not selected, they are labeled "anonymous." When start is pressed the player is thrust into
-								battle immediately as endless waves of enemies barrage the screen. To survive, players must dodge incoming projectiles and retaliate with the weapons in their arsonal. To aid survival, players 
-								can use special abilities and select a wide arrange of weapons. Every eight waves, the difficulty increases, with the hardest level starting after wave sixteen. Enemies will 
-								continue to scale with the difficulety keeping the game a challenging and rewarding bullet-hell experience. High scores will be displayed for other players who
+								battle immediately as endless waves of enemies barrage the screen. To survive, players must dodge incoming projectiles and retaliate with the weapons in their arsenal. To aid survival, players 
+								can use special abilities and select a wide array of weapons. Every eight waves, the difficulty increases, with the hardest level starting after wave sixteen. Enemies will 
+								continue to scale with the difficulty keeping the game a challenging and rewarding bullet-hell experience. High scores will be displayed for other players who
 								open the game.
 							</p>
 							<!-- Feature List -->
@@ -81,14 +84,14 @@
 											<td>Player Abilities</td>
 											<td>
 												The player is given a small set of unique abilities. Players can use an "Evade" ability, providing brief 
-												invulnerability and extra speed, and a "Bubble Shield," granting extended invulnerability. Each ability 
+												invulnerability and extra speed, and the "Bubble Shield," granting extended invulnerability. Each ability 
 												has a cooldown timer displayed on the HUD that communicates when abilities will be available again.
 											</td>
 										</tr>
 										<tr>
 											<td>Enemy Variety</td>
 											<td>
-												The game includes four enemy types: a basic enemy type that flys back and forth shooting periodically, radial enemies 
+												The game includes four enemy types: a basic enemy type that flys back and forth, shooting periodically, radial enemies 
 												that fire bullets in all directions, bomber enemies that drop fused bombs, and homing enemies that track and shoot at the player’s position.
 											</td>
 										</tr>
@@ -115,7 +118,7 @@
 										</tr>
 										<tr>
 											<td>Music and Sound</td>
-											<td>Music and Sound made by a very talented member of the club, Edrick Fajardo. (efajard4@asu.edu)</span></a></td>
+											<td>Music and Sounds produced by a very talented member of the club, Edrick Fajardo. (efajard4@asu.edu)</span></a></td>
 										</tr>
 									</tbody>
 								</table>
