--- a/the_devils_diner.html
+++ b/the_devils_diner.html
@@ -9,7 +9,7 @@
 		<title>Ryan Carpenter's Portfolio - The Devil's Diner</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />	<!-- css stylesheet -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -25,9 +25,9 @@
 						<li><a href="unstable_star.html">Unstable Star</a></li>
 						<li><a href="the_devils_diner.html" class="active">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
-						<li><a href="star_raid.html">Star Raid</a></li>
+						<!-- <li><a href="star_raid.html">Star Raid</a></li> (archived) -->
 						<li><a href="fishy_business.html">Fishy Business</a></li>
-						<li><a href="soc.html">Spirit of Calamity</a></li>
+						<!-- <li><a href="soc.html">Spirit of Calamity</a></li> (archived) -->
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
@@ -41,24 +41,32 @@
 						<div class="inner">
 							<!-- Project Title -->
 							<h1 class="major">The Devil's Diner</h1>
-							<span class="image fit"><img src="images/devil_gameplay.gif" alt="" /></span>
-							<span class="image fit"><img src="images/devil_gameplay_2.gif" alt="" /></span>
+
+							<!-- Game Widget -->
+							<iframe class="widget" frameborder="0" src="https://itch.io/embed/1731666?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=252446" width="550" height="165">
+								<a href="https://madcolors-entertainment.itch.io/the-devils-diner">The Devil's Diner by MadColors Entertainment</a></iframe>
+							
 							<!-- Project Summary -->
 							<h2>Summary</h2>
 							<p>
 								<em>The Devil's Diner</em>, was created with a small team of developers for a large scale contest called 
 								<a href="https://ldjam.com/events/ludum-dare/50">Ludum Dare Game Jam #50</a>. Ludum Dare is one of the largest game jams in the world
-								that challenges participants to create a complete game in 72 hours based off of a particular theme. The theme chosen for this jam was "Every 10 Seconds" so we came up with the idea of a 
-								cooking game where every 10 seconds a new customer comes in. To put a unique spin on genre we made the aesthetic Hell inspired where the player must serve 
-								demons in the hopes of saving soul.
+								that challenges participants to create a complete game in 72 hours based off of a particular theme. The theme chosen for this jam was "Every 10 Seconds", so we came up with the idea of a 
+								cooking game where every 10 seconds a new customer comes in. To put a unique spin on the genre we made the aesthetic Hell-inspired, where the player must serve 
+								demons in the hopes of saving his soul.
 							</p>
 							<!-- Gameplay Description -->
 							<h2>Gameplay</h2>
 							<p>
 								The player is given 5 stars at the start of a new run and can lose those stars if they fail to serve customers on time. Up to six demons can sit at the counter
-								and order food, an order will appear as a ticket on the left. The player must gather the correct ingredients for the dish while juggling other demon's orders in
+								and order food; an order will appear as a ticket on the left. The player must gather the correct ingredients for the dish while juggling other demons' orders in
 								the queue. The game is endless, challenging players to survive as long as possible while aiming for a high score.
 							</p>
+
+							<!-- Project Photos -->
+							<span class="image fit"><img src="images/devil_gameplay.gif" alt="" /></span>
+							<span class="image fit"><img src="images/devil_gameplay_2.gif" alt="" /></span>
+
 							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
@@ -91,11 +99,11 @@
 										</tr>
 										<tr>
 											<td>Dynamic Particle Systems</td>
-											<td>Noise particle system for cooking effects: Steam Particles, Cauldron Particles, Bubble Particles.</td>
+											<td>Noise particle system for cooking effects: steam particles, cauldron particles, bubble particles.</td>
 										</tr>
 										<tr>
 											<td>Intro Cutscene</td>
-											<td>Satan Cutscene includes a dialogue system with typewriter and shake effect.</td>
+											<td>Satan Cutscene includes a dialogue system with a typewriter and shake effect.</td>
 										</tr>
 										<tr>
 											<td>Save System</td>
