--- a/unstable_star.html
+++ b/unstable_star.html
@@ -9,7 +9,7 @@
 		<title>Ryan Carpenter's Portfolio - Unstable Star</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />	<!-- css stylesheet -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -25,9 +25,9 @@
 						<li><a href="unstable_star.html" class="active">Unstable Star</a></li>
 						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
-						<li><a href="star_raid.html">Star Raid</a></li>
+						<!-- <li><a href="star_raid.html">Star Raid</a></li> (archived) -->
 						<li><a href="fishy_business.html">Fishy Business</a></li>
-						<li><a href="soc.html">Spirit of Calamity</a></li>
+						<!-- <li><a href="soc.html">Spirit of Calamity</a></li> (archived) -->
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
@@ -39,6 +39,9 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- Game Widget -->
+							<iframe class="widget" frameborder="0" src="https://itch.io/embed/2657339?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
+								<a href="https://heatwave-studios.itch.io/unstable-star">Unstable Star by Heatwave Studios</a></iframe>
 							<!-- Project Title -->
 							<h1 class="major">Unstable Star</h1>
 							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
@@ -71,7 +74,7 @@
 										<tr>
 											<td>Objective System</td>
 											<td> 
-												Each level includes a unique objective such as defeating all enemies, surviving for a set time, or eliminating enemies within a time limit.
+												Each level includes a unique objectives such as defeating all enemies, surviving for a set time, or eliminating enemies within a time limit.
 												The levels follow a linear progression based on this system.
 											</td>
 										</tr>
@@ -100,15 +103,15 @@
 										<tr>
 											<td>Boss Fights</td>
 											<td> 
-												Game features two challenging boss fights. The first boss requires the destruction shield generators to disable his defenses,
-											    and defense against minions. The second boss has a flurry of attacks including a burst attack that sends out a burst of bullets in a fan,
+												The game features two challenging boss fights. The first boss requires the destruction shield generators to disable his defenses,
+											    and defense against minions. The second boss has a flurry of attacks, including a burst attack that sends out a burst of bullets in a fan,
 												and a sweep attack where the boss goes back and forth continuously firing bullets rapidly.								
 											</td>
 										</tr>
 										<tr>
 											<td>Dialogue System</td>
 											<td> 
-												The game features a full dialogue system with animated typewriter text and character portraits. along with eight cutscenes
+												The game features a full dialogue system with animated typewriter text and character portraits. along with eight cutscenes,
 												immerse the player in the narrative.
 											</td>
 										</tr>
