YouTube Video Embeds

--- a/bloodlust.html
+++ b/bloodlust.html
@@ -44,8 +44,6 @@
 								<a href="https://madcolors-entertainment.itch.io/bloodlust">Bloodlust by MadColors Entertainment</a></iframe>
 							<!-- Project Title -->
 							<h1 class="major">Bloodlust</h1>
-							<span class="image fit"><img src="images/blood_gameplay_2.gif" alt="" /></span>
-							<span class="image fit"><img src="images/blood_gameplay.gif" alt="" /></span>
 							<!-- Project Summary -->
 							<h2>Summary</h2>
 							<p>
@@ -61,6 +59,8 @@
 								and find the best time to strike, but be cautious—if a victim escapes, they'll alert the nearby guards. The player can take advantage of the weapons
 								some NPCs drop to kill more effectively. The aim of the game is to survive and accrue as many kills as possible.
 							</p>
+							<span class="image fit"><img src="gifs/blood_gameplay_2.gif" alt="" /></span>
+							<span class="image fit"><img src="gifs/blood_gameplay.gif" alt="" /></span>
 							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
