--- a/star_raid.html
+++ b/star_raid.html
@@ -41,8 +41,8 @@
 					<div class="inner">
 						<!-- Project Title -->
 						<h1 class="major">Star Raid</h1>
-						<span class="image fit"><img src="images/star_gameplay_2.gif" alt="" /></span>
-						<span class="image fit"><img src="images/star_gameplay.gif" alt="" /></span>
+						<span class="image fit"><img src="gifs/star_gameplay_2.gif" alt="" /></span>
+						<span class="image fit"><img src="gifs/star_gameplay.gif" alt="" /></span>
 						<!-- Project Summary -->
 						<h2>Summary</h2>
 						<p>
