--- a/the_devils_diner.html
+++ b/the_devils_diner.html
@@ -64,8 +64,8 @@
 							</p>
 
 							<!-- Project Photos -->
-							<span class="image fit"><img src="images/devil_gameplay.gif" alt="" /></span>
-							<span class="image fit"><img src="images/devil_gameplay_2.gif" alt="" /></span>
+							<span class="image fit"><img src="gifs/devil_gameplay.gif" alt="" /></span>
+							<span class="image fit"><img src="gifs/devil_gameplay_2.gif" alt="" /></span>
 
 							<!-- Feature List -->
 							<h2>Implemented Features</h2>
