--- a/unstable_star.html
+++ b/unstable_star.html
@@ -44,7 +44,9 @@
 								<a href="https://heatwave-studios.itch.io/unstable-star">Unstable Star by Heatwave Studios</a></iframe>
 							<!-- Project Title -->
 							<h1 class="major">Unstable Star</h1>
-							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
+							<!-- Trailer -->
+							<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/WldsXU3dp0c?si=ZzLTdAluho6H6zHU" title="YouTube video player" frameborder="0" 
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 							<!-- Project Summary -->
 							<h2>Summary</h2>
 							<p> 
@@ -54,7 +56,6 @@
 								to save the galaxy. As the vice president and systems lead, I oversaw project management, task organization, and project scheduling.
 							</p>
 							<!-- Gameplay Description -->
-							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
 							<p> 
 								<em>Unstable Star</em> features top-down bullet-hell combat across three levels, each with distinct challenges and unique boss fights. Swappable weapons
