--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -39,12 +39,13 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- Project Title -->
+							<h1 class="major">Rogue Nebula</h1>
+							<!-- Game Embed -->
+							<iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/11536087?color=08031a" allowfullscreen="" width="1000" height="700"></iframe></iframe>
 							<!-- Game Widget -->
 							<iframe class="widget" frameborder="0" src="https://itch.io/embed/2220827?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
 								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe>
-							<!-- Project Title -->
-							<h1 class="major">Rogue Nebula</h1>
-							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
 							<!-- Project Summary -->
 							<h2>Summary</h2>
 							<p> 
